--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,7 @@
   "plugins": [
     "@babel/plugin-transform-classes",
     "@babel/plugin-transform-arrow-functions",
-    "@babel/plugin-transform-spread"
+    "@babel/plugin-transform-spread",
+    "@babel/plugin-proposal-class-properties"
   ]
 }
