--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8"
+  },
+  "dependencies": {
+    "npm": "^6.4.1"
   }
 }
